tests/src/frontend/syntax/invalid/lambda_inconsistent_param_types_4.sk
fun main(): String {
  l = {p1, p2: String} ~> p2;
  l{p2 => "Fail", p1 => 42}
}
